Added Flyway migration changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,17 @@
 spring.application.name=ProductService
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/productService
-spring.datasource.username=productServiceUser
-#spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://localhost:3306/ECommerce
+spring.datasource.username=eCommerceUser
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 
 server.port=8080
 logging.level.org.springframework.web.*=TRACE
+
+# Flyway config (optional, these are default)
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+#spring.flyway.baseline-on-migrate=true
+#spring.flyway.clean-on-validation-error=true
